--- a/styles/style.css
+++ b/styles/style.css
@@ -42,9 +42,7 @@ ol {
 .content {
   display: flex;
   align-items: end;
-  margin: auto;
   gap: 30px;
-
 }
 
 .visually-hidden {
@@ -61,6 +59,8 @@ ol {
 .result {
   display: flex;
   flex-direction: column;
+  justify-content: end;
+  block-size: 100%;
   gap: 16px;
 }
 
@@ -229,7 +229,6 @@ ol {
   position: relative;
   display: flex;
   flex-direction: column;
-  gap: 30px;
   block-size: 298px;
   overflow-y: auto;
 }
@@ -247,6 +246,10 @@ ol {
 
 .content__list-item {
   padding: 2px;
+}
+
+.content__list-item:not(:last-child) {
+  margin-bottom: 30px;
 }
 
 .content__card-link {
@@ -292,6 +295,7 @@ ol {
 .content__video-card-description-container {
   display: flex;
   flex-direction: column;
+  width: 200px;
   gap: 6px;
 }
 
